mysql-cluster/base/svc-exporter.yaml
# Service for the Master Exporter
apiVersion: v1
kind: Service
metadata:
  name: mysql-master-svc
  namespace: final
spec:
  ports:
  - name: mysql-exporter
    port: 9104
    targetPort: 9104
  selector:
    app: mysql-master
---
# Service for the Slave Exporter
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave-svc
  namespace: final
spec:
  ports:
  - name: mysql-exporter
    port: 9104
    targetPort: 9104
  selector:
    app: mysql-slave
