mysql-cluster/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-metrics-ingress
  namespace: validation
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mysql-metrics-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: metricsss.kube0.ir
    http:
      paths:
      - path: /master(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mysql-master-svc
            port:
              number: 9104
      - path: /slave(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mysql-slave-svc
            port:
              number: 9104
